--- a/FormulariosHtml/select/select.html
+++ b/FormulariosHtml/select/select.html
@@ -24,11 +24,11 @@
 
             <input list = "cursos">
             <datalist id = cursos>
-                <option value = "Java"></option>
-                <option value = "Html"></option>
-                <option value = "Css"></option>
-                <option value = "Javascript"></option>
-                <option value = "Python"></option>
+                <option value = "Java">Java</option>
+                <option value = "Html">Html</option>
+                <option value = "Css">Css</option>
+                <option value = "Javascript">Javascript</option>
+                <option value = "Python">Python</option>
             </datalist>
         </main>
     </body>
