--- a/IntroduccionCss/display/index.html
+++ b/IntroduccionCss/display/index.html
@@ -38,7 +38,7 @@
                     <li>Home</li>
                     <li>Cursos</li>
                     <li>Categorias</li>
-                    <li>Blog</li>
+                    <li class = "diff">Blog</li>
                 </ul>
                 <form action = "">
                     <input type = "search"  class = "search" placeholder = "Buscar...">
